# Fintech

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/app/: config.py  main.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  dividends.py  health.py  plans.py  proxy.py  shareholders.py  transactions.py  uploads.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  session.py
app/models/: __init__.py  audit_log.py  base.py  employee_plan.py  proxy_ballot.py  shareholder.py  tenant.py  transaction.py  transaction_report.py  user.py
app/obs/: __init__.py  audit.py  metrics.py  tracing.py
app/schemas/: __init__.py  dividend.py  plan.py  proxy.py  shareholder.py  transaction.py
app/services/: data_retention.py  disbursements.py  dividends.py  plans.py  reporting.py  transaction_events.py  uploads.py  vesting_client.py
app/tests/: test_auth.py  test_db_schema.py  test_health.py
app/workers/: ingestion.py  observability.py
configs/: dev-jwt.pem  logging.yaml
docs/: implementation-checklist.md  openapi.json
docs/adr/: 0001-observability-stack.md  0002-ci-cd-pipeline.md
docs/dashboards/: data-retention-dashboard.json  observability-dashboard.json
docs/diagrams/: observability.md
docs/runbooks/: data-retention.md  observability.md
infra/helm/: README.md
infra/helm/fintech/: Chart.yaml  values.yaml
infra/helm/fintech/templates/: _helpers.tpl  deployment-standby.yaml  deployment.yaml  hpa.yaml  service.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
migrations/: README.md  env.py
migrations/versions/: 20240718_01_initial_schema.py
ops/elk/: logstash.conf
ops/prometheus/: prometheus.yml
rust/vesting/: Cargo.toml
rust/vesting/src/: lib.rs
scripts/: entrypoint.sh  generate_openapi.py  seed_demo_data.py
tests/: conftest.py
tests/integration/: test_disbursements.py  test_dividends_api.py  test_plans_api.py  test_proxy_votes.py  test_shareholders.py  test_upload_pipeline.py
tests/unit/: test_data_retention.py  test_dividends.py  test_monthly_scheduler.py  test_observability.py  test_plan_service.py  test_vesting_client.py
workers/data_retention/: __init__.py  main.py
workers/dividend_worker/: __init__.py  __main__.py  main.py
workers/monthly_scheduler/: __init__.py  scheduler.py
workers/transaction_reporting/: __init__.py  __main__.py  main.py
workers/upload_validator/: __init__.py  __main__.py  main.py
