[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-platform"
version = "0.1.0"
description = "Cloud-native multi-tenant fintech platform skeleton"
readme = "README.md"
authors = [{ name = "Fintech Team", email = "dev@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=1.10,<2.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.4",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.6",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
