[package]
name = "vesting"
version = "0.1.0"
edition = "2021"

[lib]
name = "vesting"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
